  * Fix for CVE-2010-0433 where some kerberos enabled versions of OpenSSL
    could be crashed if the relevant tables were not present (e.g. chrooted).
    [Tomas Hoger <thoger@redhat.com>]
  * Reject UniversalString and BMPString types with invalid lengths. This
    prevents a crash in ASN1_STRING_print_ex() which assumes the strings have
    a legal length. (CVE-2009-0590)
    [Steve Henson]

 -- Emese Revfy <ganesa@balabit.hu>  Mon, 13 Dec 2010 10:00:00 +0200

openssl (0.9.8h-6.syslogng32.1.1) syslogngdeps20security; urgency=low

  * SECURITY UPDATE: CVE-2010-3864 fix, CVE-2010-0740

 -- Tamas SZERB <toma@balabit.com>  Wed, 01 Dec 2010 11:43:47 +0100

openssl (0.9.8h-6.syslogng32.1) syslogngdeps20; urgency=low

  * MD5 amd64 assembly code generator now works.
  * Fixed AIX linking.
  * Runs make test after building.

 -- Tamas Pal <folti@balabit.com>  Wed, 29 Sep 2010 11:17:17 +0200

openssl (0.9.8h-6.syslogng31) syslogngdeps10; urgency=low

  * Works with syslog-ng-3.1 release system.

 -- Andras Tevesz <ghost@balabit.com>  Mon, 08 Mar 2010 15:15:53 +0100

openssl (0.9.8h-5.syslogng30) syslogngdeps10; urgency=low

  * Works with syslog-ng-3.1 release system.

 -- Tamas Pal <folti@balabit.com>  Tue, 03 Nov 2009 15:09:40 +0100

openssl (0.9.8h-4.syslogng30) syslogng31; urgency=low

  * SECURITY UPDATE: Added Ubuntu patch to fix CVE-2008-5077.

 -- Tamas Pal <folti@balabit.com>  Thu, 08 Jan 2009 17:51:32 +0100

openssl (0.9.8h-3.syslogng30) syslogng30; urgency=low

  * Fixed Packaging for AIX.
  * Bumped version 0.9.8h-3.syslogng31

 -- Tamas Pal <folti@balabit.com>  Wed, 01 Oct 2008 18:21:56 +0200

openssl (0.9.8h-2.syslogng30) syslogng30; urgency=low

  * Simplified the configure part and fixed the prefix,
    now using INSTALL_PREFIX.

 -- ZorpOS Maintainers <zorpos@balabit.com>  Thu, 31 Jul 2008 14:14:54 +0200

openssl-syslog-ng (0.9.8h-1) unstable; urgency=low

  * Support for multi arctitecture for solaris and linux-generic.
