@@ -8,6 +8,9 @@ openssl (0.9.8h-6.syslogng32.1.2) syslogngdeps20security; urgency=low
     prevents a crash in ASN1_STRING_print_ex() which assumes the strings have
     a legal length. (CVE-2009-0590)
     [Steve Henson]
+  * Remove MD2 from digest algorithm table. This follows
+    the recommendation in several places that it is not used in new applications.
+    CVE-2009-2409
 
  -- Emese Revfy <ganesa@balabit.hu>  Mon, 13 Dec 2010 10:00:00 +0200
 
